--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="room">
-    <img src="img/pro.png">
+    <img src="pro.png">
     <h1>HALLO, SAYA</h1>
     <h1 class="sis">SISWA/SISWI</h1>
     <h1 class="smk">SMK ASTRINDO</h1>
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="gel">
-      <img src="img/hhh.jpg" style="float:left; margin:10; margin-right: 20px;"><br><br><br><br><br><br><br>
+      <img src=hhh.jpg" style="float:left; margin:10; margin-right: 20px;"><br><br><br><br><br><br><br>
       <h3>ABOUT ME <hr></h3><br>
       <h1>MUAMAR KHADAFY</h1><br ><br>
       <div class="fel">
